@@ -16,6 +16,7 @@ Improved Text Aventure Debugging:
 
 Improved Debugging: 
 -Mouse accions: click (toggle breakpoint, change registers), Scroll up/down by using the mouse wheel
+-Can now browse Basic variables
 
 Improved Find menu: now can find several bytes and open Hexadecimal Editor on the results list
 
